# langchain_agent

./: .flake8  .gitignore  CHANGELOG.md  Makefile  PACKAGING.md  PROJECT_SUMMARY.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  code-quality.yml  dependency-update.yml  publish.yml
src/: __init__.py
src/langchain_agent/: __init__.py  agent.py  config.py  main.py  tools.py  utils.py
tests/: test_config.py  test_tools.py
